formed a way to pull data from lists specified in the drop down  and make them show up in the html

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <script defer src="./js/script.js"></script>
-    <title>Weather-App</title>
+    <title>NYT Bestsellers</title>
 </head>
 <body>
     <header>
-        <h1>Books in history</h1>
-        <h3>NYT Bestsellers History explorer</h3>
+        <!-- <h1>Books in history</h1> -->
+        <h3>NYT Bestsellers Explorer</h3>
     </header>
     <form class="form-select" id="list-name">
         <select class="form-select" aria-label="">
             
           </select>
-          <div></div>
+          <ol>
+              
+          </ol>
 </body>
 </html>
